--- a/FakeNewsPrediction.ipynb
+++ b/FakeNewsPrediction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,8 +31,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -49,7 +51,7 @@
        "True"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -62,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +72,7 @@
      "output_type": "stream",
      "text": [
       "Words:\n",
-      "{\"wasn't\", 'herself', \"you've\", 'each', 'didn', 'doing', \"won't\", 'who', 'as', \"it's\", 'there', 'few', 'about', 'all', 'very', \"wouldn't\", 'just', 'm', 'they', 'whom', \"don't\", 'this', 'is', 'are', 'before', \"should've\", 'in', 'won', 'do', 'but', \"didn't\", \"hadn't\", 'did', 'then', \"isn't\", 'down', 'same', 'other', 'which', \"haven't\", 'by', 'should', 'aren', 'yourselves', 'you', 'wouldn', 'hers', 'don', 'so', 're', 'that', 'yourself', \"shan't\", 'will', 'because', 'an', \"that'll\", 'on', 'off', 'under', 'from', 'be', 'have', 'of', 'some', \"you're\", 'no', 'hasn', 'during', \"needn't\", \"couldn't\", 'more', 'than', 'while', 'her', 'its', 'not', 'ourselves', 'wasn', 'doesn', 'now', 'out', 'the', \"she's\", 'theirs', 'am', 'his', 'over', 'does', 'those', 'how', 'own', 'for', 'itself', 'until', 'himself', 'ma', 'when', 'with', 'my', 'up', 'both', \"aren't\", \"doesn't\", 'through', 't', \"mustn't\", 'if', 'once', 'having', 'couldn', 'haven', \"weren't\", 'been', 'into', 'he', 'll', 'it', \"hasn't\", 'after', 'and', 'again', 'here', \"you'd\", 'mustn', 'needn', 'them', 'd', 'can', 'a', 'above', 'themselves', 'shan', 'she', 'yours', 'their', 'where', 'why', 'our', 'what', 'o', 'being', 'below', 'nor', 'any', 'ain', 'we', 'or', 'was', 'isn', 'too', 'these', 'between', \"shouldn't\", \"you'll\", 'were', 's', 'weren', 'has', 'mightn', 'most', 'him', 'had', 'i', \"mightn't\", 'ours', 'myself', 'shouldn', 'at', 'me', 'to', 'such', 've', 'your', 'only', 'hadn', 'against', 'y', 'further'}\n",
+      "{'further', 'few', 'you', 'until', 'whom', 'what', \"needn't\", 'than', 'up', 'being', 'some', 'can', 'hers', 's', 'ourselves', 'because', 'off', 'down', 'of', 'which', 'were', 'isn', 'and', 'about', 'on', 're', 'itself', 'when', 'other', 'shouldn', 'here', 'their', 'too', \"haven't\", 'does', \"wasn't\", 'he', 'in', 'haven', 'didn', 'no', 'did', 'between', \"she's\", 'her', 'more', 'it', 'ma', 'yourselves', 'weren', 'me', 'if', \"didn't\", 'an', 'its', 'having', 'him', 'doing', 'both', \"wouldn't\", 'i', 'there', 'once', 'as', 'for', \"won't\", \"weren't\", 'just', \"hasn't\", 'a', \"couldn't\", 'only', \"aren't\", 'from', 'won', 'mightn', 'very', 'ours', \"mustn't\", 'my', 'over', 'after', 'd', 'any', 'm', \"doesn't\", 'yours', 'yourself', 'such', 'with', 'himself', 'out', 'during', 'they', 'why', 'or', 'll', 'all', 'now', \"you'd\", 'do', 'y', \"you'll\", 'been', 'under', 'she', \"should've\", 'not', 'again', 'these', 'have', 'those', 'against', \"shan't\", 'above', \"that'll\", 'o', 'shan', 'was', \"you've\", 'most', 'has', 'are', 'through', 'the', 'doesn', 'same', 'am', 'into', 'our', 'theirs', 'by', 'at', 'be', 'then', 'so', 've', \"hadn't\", \"mightn't\", 'herself', \"it's\", 'own', 'hadn', 'below', 'them', 'couldn', 'aren', \"you're\", 'your', 'before', 'how', 'each', 'his', 'mustn', \"shouldn't\", \"don't\", 'myself', 'wasn', 'themselves', 'while', 'where', 'nor', 'will', 'ain', 'needn', 'who', 'this', 'to', 'hasn', 'wouldn', 'but', \"isn't\", 'don', 'had', 'is', 'we', 'that', 't', 'should'}\n",
       "Total number of words:  179\n"
      ]
     }
@@ -90,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -301,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -326,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -359,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -372,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -381,7 +383,7 @@
        "(20800, 17128)"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -392,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -459,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -469,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -529,6 +531,13 @@
     "print('Classification Report:')\n",
     "print(classificationRep)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
